--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="./parse2.js" defer></script>
     <title>Dojo Zoom Attendance Visualizer</title>
 </head>
 
@@ -23,14 +24,14 @@
                 <input class="form-control" type="file" name="csvFile" id="csvFile" accept=".csv">
             </div>
             <div class="form-group mb-2">
-                <label for="offset">Select an offset</label>
+                <label class="form-label"  for="offset">Select Your Timezone Offset</label>
                 <select class="form-control-sm" name="offset" id="offset">
-                    <option value="-3">-3</option>
-                    <option value="-2">-2</option>
-                    <option value="-1">-1</option>
-                    <option value="0">0</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
+                    <option value="-3">-3 AST</option>
+                    <option value="-2">-2 EST</option>
+                    <option value="-1">-1 CST</option>
+                    <option value="0">0 MST</option>
+                    <option value="1">1 PST</option>
+                    <option value="2">2 AKST</option>
                 </select>
             </div>
             <input class=" btn btn-primary" type="submit" value="Check Attendance">
