getting and displaying meetings

--- a/zoom/page.html
+++ b/zoom/page.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -13,11 +14,8 @@
         
     </select>
 
-    <form action="/meetings" method = 'post'>
-        <input type="submit" value="get meetings">
-    </form>
-    <form action="/part" method = 'post'>
-        <input type="submit" value="get participants">
-    </form>
+    <button id="getMeetingsBtn" onclick="getMeetings()">Get Meetings</button>
+
+    <div id="meetingsList"></div>
 </body>
 </html>
