--- a/zoom/page.html
+++ b/zoom/page.html
@@ -17,5 +17,9 @@
     <button id="getMeetingsBtn" onclick="getMeetings()">Get Meetings</button>
 
     <div id="meetingsList"></div>
+
+    <hr>
+
+    <div id="occurrencesList"></div>
 </body>
 </html>
