converted to selects, in process parsing multipage responses

--- a/zoom/page.html
+++ b/zoom/page.html
@@ -10,22 +10,16 @@
 </head>
 <body>
     
-    <select id="usersSelect" >
-        
-    </select>
+    <select id="usersSelect" ></select>
+    <button onclick="getMeetings()">Get Meetings</button>
 
-    <button id="getMeetingsBtn" onclick="getMeetings()">Get Meetings</button>
+    <select id="meetingsList"></select>
+    <button onclick="getMeeting()">Get Occurrances</button>
 
-    <div id="meetingsList"></div>
-
+    <select id="occurrencesList"></select>
+    <button onclick="getAttendance()">Get Attendance</button>
     <hr>
-
-    <div id="occurrencesList"></div>
-
-    <hr>
-
     <div id="attendancesList"></div>
-
 
 </body>
 </html>
